--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^13.7.0",
+    "js-sha256": "^0.11.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vuedraggable": "^4.1.0"
